[package]
name = "ora-client"
version= "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Part of the Ora scheduler framework."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
eyre = "0.6.8"
ora-common = { version = "^0.1.0", path = "../ora-common" }
serde = "1.0.178"
serde_json = "1.0.104"
time = "0.3.23"
uuid = "1.4.0"
