[package]
name = "ora-common"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Part of the Ora scheduler framework."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cron = "0.12.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
time = { version = "0.3.23", features = ["serde", "serde-well-known"] }
