[package]
name = "ora-graphql"
version= "0.3.1"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Part of the Ora scheduler framework."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0.0", default-features = false, features = [
  "tracing",
  "time",
  "uuid",
] }
base64 = "0.21.2"
eyre = "0.6.8"
ora-client = { version = "^0.2.1", path = "../ora-client" }
ora-common = { version = "^0.1.1", path = "../ora-common" }
serde_json = "1.0.104"
time = "0.3.23"
uuid = "1.4.1"
