[package]
name = "ora-graphql"
version= "0.5.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Part of the Ora scheduler framework."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "7.0.3", default-features = false, features = [
  "tracing",
  "time",
  "uuid",
] }
base64 = "0.22.0"
eyre = "0.6.8"
ora-client = { version = "^0.2.1", path = "../ora-client" }
ora-common = { version = "^0.1.2", path = "../ora-common" }
ora-worker = { version = "^0.4.2", path = "../ora-worker", features = ["registry"] }
serde_json = "1.0.104"
time = "0.3.23"
uuid = "1.4.1"
