[package]
name = "ora-macros"
version.workspace = true
publish.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20.3"
humantime = "2.1.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = "2.0.39"
