[package]
name = "ora-store-memory"
version= "0.2.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Part of the Ora scheduler framework."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
async-stream = "0.3.5"
async-trait = "0.1.71"
eyre = "0.6.8"
futures = "0.3.28"
indexmap = "2.0.0"
memmem = "0.1.1"
ora-client = { version = "^0.2.0", path = "../ora-client" }
ora-common = { version = "^0.1.0", path = "../ora-common" }
ora-scheduler = { version = "^0.2.0", path = "../ora-scheduler" }
ora-worker = { version = "^0.2.0", path = "../ora-worker" }
parking_lot = "0.12.1"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["sync"] }
tracing = "0.1.37"
uuid = { version = "1.4.0", features = ["v4"] }
