[package]
name = "ora-test"
version= "0.3.1"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Part of the Ora scheduler framework."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
eyre = "0.6.8"
ora-api = { version = "^0.3.3", path = "../ora-api" }
ora-client = { version = "^0.2.0", path = "../ora-client" }
ora-common = { version = "^0.1.2", path = "../ora-common" }
ora-worker = { version = "^0.4.2", path = "../ora-worker" }
tokio = { version = "1.29.1", features = ["rt", "time"] }
tokio-util = "0.7.8"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
serde = { version = "1.0.180", features = ["derive"] }
tokio = { version = "1.29.1", features = ["rt", "time", "macros"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
