[package]
name = "ora-timer"
version= "0.1.2"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Part of the Ora scheduler framework."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minstant = { version = "0.1.2", optional = true }
tokio = { version = "1.29.1", features = ["rt", "time", "sync", "macros"], optional = true }
tracing = "0.1.37"

[dev-dependencies]
criterion = "0.5.1"
futures = "0.3.28"
thread-priority = "0.16.0"
time = "0.3.23"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "sync"] }
tracing-subscriber = "0.3.17"

[features]
default = ["std", "async"]
std = ["dep:minstant"]
async = ["dep:tokio"]

[[example]]
name = "async_timer"
required-features = ["async", "std"]

[[bench]]
name = "timing_wheel"
harness = false
