[package]
name = "ora-util"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Part of the Ora scheduler framework."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", default-features = false }
cron = "0.12.0"
ora-common = { version = "0.1.0", path = "../ora-common" }
tracing = "0.1.37"
