[package]
name = "ora-worker"
version= "0.2.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Part of the Ora scheduler framework."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
eyre = "0.6.8"
futures = "0.3.28"
ora-common = { version = "^0.1.0", path = "../ora-common" }
parking_lot = "0.12.1"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["sync", "time", "rt", "macros"] }
tokio-util = "0.7.8"
tracing = "0.1.37"
uuid = "1.4.0"
