[package]
name = "ora-worker"
version = "0.4.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Part of the Ora scheduler framework."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
eyre = "0.6.8"
futures = "0.3.28"
ora-common = { version = "^0.1.2", path = "../ora-common" }
parking_lot = "0.12.1"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["sync", "time", "rt", "macros"] }
tokio-util = "0.7.8"
tracing = "0.1.37"
uuid = { version = "1.4.0", features = ["v4"] }


serde = { version = "1.0.193", optional = true }
serde_json = { version = "1.0.108", optional = true }
time = { version = "0.3.30", features = [
    "serde",
    "serde-well-known",
], optional = true }

[features]
default = ["registry"]
registry = ["dep:time", "dep:serde", "dep:serde_json"]
